package app.data;

/** Request. */
public interface Request {}
