package app.data;

/** Response. */
public interface Response {}
